# findobj

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst  rtd-pip-requirements
docs/findobj/: detection.rst  findstars.rst  index.rst  morphology.rst  utils.rst
findobj/: __init__.py  detection.py  findstars.py  morphology.py  setup_package.py
findobj/tests/: test_detection.py
findobj/utils/: scale_img.py
licenses/: LICENSE.rst
