[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = findobj
description = Identify stars in an image.
long_description = This is a package to identify stars and estimate source morphological parameters in an astronomical image.
author = Larry Bradley
author_email = larry.bradley@gmail.com
license = BSD
url = https://github.com/larrybradley/findobj
edit_on_github = False
github_project = larrybradley/findobj
